1. ofs ui now accepts alphanumeric barcode. 2. resolved z-index issue for ofs canteen header. 3. fixed a missing class introduced by qingyi when changing new stall description to a textarea

--- a/cz2006/web/static/ofs/css/ofsstyle.css
+++ b/cz2006/web/static/ofs/css/ofsstyle.css
@@ -29,7 +29,6 @@ height: 100%;
 
 
 .title{
-z-index: 2;
 color: #fff;
 background-color: #999999;
 border-color: #999999;
